WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55138
FEBlendElement changes doesn't require relayout.
https://bugs.webkit.org/show_bug.cgi?id=55138
Summary
FEBlendElement changes doesn't require relayout.
Renata Hodovan
Reported
2011-02-24 05:51:57 PST
FEBlendElement changes doesn't require relayout.
Attachments
Proposed patch
(4.00 KB, patch)
2011-02-24 06:04 PST
,
Renata Hodovan
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2011-02-24 06:04:38 PST
Created
attachment 83645
[details]
Proposed patch
Andreas Kling
Comment 2
2011-02-24 06:27:41 PST
Comment on
attachment 83645
[details]
Proposed patch LGTM.
Renata Hodovan
Comment 3
2011-02-25 00:30:49 PST
Committed
r79664
: <
http://trac.webkit.org/changeset/79664
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug